fix: prevent scrollbar on viewport

--- a/src/App.less
+++ b/src/App.less
@@ -1,6 +1,7 @@
 .app {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 
   .suspense-spin {
     margin: auto;
